...
                }
            },
            onAddressSelected = { address ->
                selectedAddress = address
                addressInput = address.formattedAddress
            },
            modifier = Modifier.fillMaxWidth().testTag("Address Field")

        )
        
        Spacer(modifier = Modifier.height(8.dp))
        Spacer(modifier = Modifier.height(32.dp))
        
...
    hasSelectedAddress: Boolean,
    onValidate: () -> Unit
) {
    Button(
        onClick = onValidate,
        enabled = !isValidating && hasSelectedAddress,
        modifier = Modifier.fillMaxWidth().testTag("charge button")
    ) {
        if (isValidating) {
            Row(verticalAlignment = Alignment.CenterVertically) {
                CircularProgressIndicator(
                    modifier = Modifier.size(16.dp),
                    strokeWidth = 2.dp,
                    color = MaterialTheme.colorScheme.onPrimary
                )
                Spacer(modifier = Modifier.width(8.dp))
                Text("Validating Address...")
            }
        } else {
            Text("Get Base Delivery Charge")
        }
    }
}

private fun handleAddressValidation(
    selectedAddress: SelectedAddress?,
...
